# rfid-rc522-rs

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
examples/: basic_read.rs  basic_test.rs  dumpinfo.rs
src/: card_types.rs  commands.rs  cs_pin_wrapper.rs  errors.rs  lib.rs  registers.rs  rfid_rc522.rs
