[package]
name = "rfid_rc522"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-uno"]

[dependencies.panic-halt]
version = "0.2.0"

[dependencies.ufmt]
version = "0.2.0"

[profile.release]
opt-level = "z"  # Size optimization
panic = "abort"

[profile.dev]
opt-level = "s"  # Some optimizations but keeping the binary size small
panic = "abort"